# NBA-props-Model

./: .gitignore  .pre-commit-config.yaml  12_WEEK_DEVELOPMENT_ROADMAP.md  7DAY_QUICKSTART.md  ARCHITECTURE_RECOMMENDATIONS_EXECUTIVE_SUMMARY.md  BETTING_STRATEGY_IMPLEMENTATION.md  BETTING_SUMMARY_OCT22_2025.md  BIAS_FIX_RESULTS.md  CLAUDE.md  CODEBASE_AUDIT_OCT20_2025.md  CODE_REVIEW_CHECKLIST.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DATA_LEAKAGE_FIXES_SUMMARY.md  EXECUTIVE_ANALYSIS.md  FEATURE_GAP_ANALYSIS_REPORT.md  FEATURE_IMPROVEMENT_STRATEGY_SUMMARY.md  FINAL_BETTING_REPORT_OCT22_2025.md  FINAL_RESULTS_SUMMARY.md  MLFLOW_ANALYSIS_AND_RECOMMENDATIONS.md  MLFLOW_ARCHITECTURE.txt  MLFLOW_ARCHITECTURE_DIAGRAM.txt  MLFLOW_EXECUTIVE_SUMMARY.md  MLFLOW_IMPLEMENTATION_CHECKLIST.md  MLFLOW_INFRASTRUCTURE_GUIDE.md  MLFLOW_QUICKSTART.md  MLFLOW_QUICK_START.md  MLFLOW_SETUP_COMPLETE.md  ML_ARCHITECTURE_RESEARCH_REPORT.md  ML_PIPELINE_ANALYSIS.md  ML_PIPELINE_REFACTORING_SUMMARY.md  MONTE_CARLO_ANALYSIS.md  OPTIMAL_BETTING_STRATEGY.md  OPTIMAL_BETTING_STRATEGY_FINAL_REPORT.md  PHASE1_ANALYSIS_SUMMARY.md  PHASE1_BETTING_RESULTS.md  PHASE1_LEAKAGE_INVESTIGATION_REPORT.md  PHASE1_RESULTS_SUMMARY.md  PHASE1_VALIDATION_RESULTS.md  PRODUCTION_CODE_STANDARDS.md  PRODUCTION_STANDARDS_SUMMARY.md  (+36 more)
analysis/: normality_test_analysis.md  normality_test_explanation.md
docs/: FEATURE_REGISTRY_TEMPLATE.md  PROJECT_STATUS.md  categorical_feature_handling_guide.md  databricks_migration_guide.md  features_plan.md  model_recommendations.md
models/: best_model_XGBoost.pkl  encoder.pkl  feature_importance_20251020_143055.csv  feature_importance_FIXED_20251020_151841.csv  feature_importance_FIXED_V2_20251020_153216.csv  feature_importance_PHASE1_20251020_224653.csv  feature_importance_PHASE1_20251020_224901.csv  model_metadata.json  quantile_models.pkl  scaler.pkl
notebooks/: 00_run_feature_pipeline.ipynb  01_feature_engineering.ipynb  02_enhanced_analysis_betting_insights.ipynb  03_feature_exploration.ipynb  (+2 more)
(+1074 files in other folders)
