[project]
name = "nba-props-model"
version = "0.1.0"
description = "NBA player props prediction model using CTG advanced stats and ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.8.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.4.0",
    "nba-api>=1.10.0",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | experiments
  | notebooks
  | research
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "experiments", "notebooks", "research"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
ignore_missing_imports = true

# Strict mode for critical modules
[[tool.mypy.overrides]]
module = [
    "src.betting.*",
    "src.evaluation.*"
]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
